# SimpleShopWebApp

./: .env.dist  README.md
backend/: bot.py  config_reader.py  pyproject.toml  requirements.txt
backend/infrastructure/database/models/: users.py
backend/infrastructure/database/repo/: requests.py  users.py
backend/src/: alembic.ini
backend/src/filters/: admin.py
backend/src/handlers/: __init__.py  admin.py
backend/src/middlewares/: database.py
backend/src/misc/: default_commands.py
backend/src/simpleshopwebapp/: config_reader.py
backend/src/simpleshopwebapp/bot/: bot.py
backend/src/simpleshopwebapp/bot/filters/: admin.py
backend/src/simpleshopwebapp/bot/handlers/: admin.py
backend/src/simpleshopwebapp/bot/middlewares/: database.py
backend/src/simpleshopwebapp/bot/misc/: default_commands.py
backend/src/simpleshopwebapp/infrastructure/database/: setup.py
backend/src/simpleshopwebapp/infrastructure/database/repo/: requests.py  users.py
backend/src/simpleshopwebapp/infrastructure/migrations/: env.py
backend/src/simpleshopwebapp/infrastructure/migrations/versions/: bcec859631a8_initial.py
frontend/: vite.config.ts
