[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "SimpleShopWebApp"
version = "0.0.1"

description = "SimpleShopWebApp - example of a simple shop web app in Telegram"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "environs",
    "betterlogging",
    "pydantic_settings",
]
[project.optional-dependencies]
bot = [
    "aiogram",
    "redis",
    "Faker",
]
web = [
    "aiogram",
    "uvicorn",
    "fastapi",
    "python-dateutil",
]